# password-manager

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/commands/: add.rs  delete.rs  generate.rs  get.rs  init.rs  list.rs  mod.rs
src/crypto/: encrypt.rs  kdf.rs  mod.rs
src/security/: clipboard.rs  memory.rs  mod.rs
src/vault/: model.rs  storage.rs
