[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
sha2 = "0.10.8"
rand = "0.8.5"
zeroize = { version = "1.8.1", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.17", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
rpassword = "7.3.1"
arboard = "3.4.1"
